fix- z-index issue in relation to drop down menu being covered by different elements - initially this worked and gave a nice effect from the nav bar to appear and dissapear without using JS but now it isn't practical or user friendly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,7 @@ input:checked~.btn {
   flex: 1;
   padding: 10px;
   text-align: center;
-  flex-grow: 1;
+  z-index: -5;
 }
 
 /* Create unequal column */
@@ -229,7 +229,7 @@ div h4::before {
   text-align: center;
   position: relative;
   height: 550px;
-  z-index: 0;
+  z-index: -2;
 }
 
 .drop-shadow {
@@ -457,7 +457,7 @@ div p {
 /* page-break shape */
 .diagonal {
   position: relative;
-  z-index: 1;
+  z-index: -20;
   padding: 25px;
   height: 250px;
   width: 100%;
@@ -700,7 +700,6 @@ div #t_heading {
   margin-right: auto;
   background: url(../images/pricing.jpeg) center center / cover no-repeat fixed;
   background-size: 85%;
-
 }
 
 
@@ -955,6 +954,17 @@ th, td {
     right: 0;
     background-color: rgb(251, 247, 247);
     border-radius: 0 0 10px 10px;
+    border-left: 4px solid rgba(139, 139, 148, 0.04);
+    border-right: 4px solid rgba(139, 139, 148, 0.04);
+    border-bottom: 4px solid rgba(139, 139, 148, 0.04);
+  }
+
+  nav ul li {
+    border-top: 1px solid rgba(144, 140, 140, 0.1);
+  }
+
+  nav ul li:hover {
+    background-color:  rgba(139, 139, 148, 0.04);
   }
 
   nav:has(#input-6:checked) .nav-list {
@@ -964,6 +974,7 @@ th, td {
   nav:has(#input-6:checked) .toggle-text {
     display: inline;
 }
+
 }
 
 @media screen and (max-width: 310px) {
